# banking

./: .env  Banking app notes.txt  Cargo.toml
migrations/: 20250909163705_create_user_table.sql  20250909164346_create_account_table.sql
src/: main.rs  utils.rs
src/controllers/: account.rs  auth.rs  mod.rs  user.rs
src/database/: account_query.rs  user_query.rs
src/databse/: user_query.rs
src/middleware/: auth_verify.rs  mod.rs
src/models/: account.rs  claims.rs  mod.rs  sign_in_request.rs  sign_up_request.rs  update_account_request.rs  update_user_request.rs  user_model.rs
