[package]
name = "banking"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
jsonwebtoken = "9.0.0"
bcrypt = "0.17.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "mysql", "chrono" ] }
tokio = { version = "1.47.1", features = ["full"] }
